# Projet-Immobilier

./: .gitignore  README.md  app.py  decision.py  etl copy 2.py  etl.py  extract_with_gen_ai.py  extract_with_regex.py  get_coord_API.py  jina_web_scraper copy.py  jina_web_scraper.py  main_scraper copy.py  main_scraper.py  projet old version.py  projet.ipynb  projet.py  pyproject.toml  web_scraper.py
projet_immobilier/: __init__.py  get_additionals_informations.py
