[project]
name = "projet-immobilier"
version = "0.1.0"
description = "Système intelligent d'analyse du marché immobilier français"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "geopy>=2.4.1",
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]
